--- a/MilesToGoCatering.html
+++ b/MilesToGoCatering.html
@@ -85,7 +85,7 @@
         <div class="row" >
             <div class="col-sm-8">
                 <h2 class="featurette-heading">We proudly cater <span class="text-muted">ALL</span> your events!</h2>
-                <p class="lead">We are a full service catering company serving: weddings, small-mid sized corporate events, and all of your custom events! Give us a call and tell us about your next event!</p>
+                <p class="lead">We are a full service catering company based in Charlotte, NC serving: weddings, small-mid sized corporate events, and all of your custom events! We strive to make our food delicious, our catering service superior, and your experience delightful and memorable. Give us a call and tell us about your next event!</p>
                     <a class="btn btn-default btn-lg" href="assets/images/MilesToGoCateringMenu.doc">Menu Download &raquo;</a>
                 </p>
             </div>
@@ -112,7 +112,7 @@
             <div class="col-sm-4">
                 <img class="img-thumbnail img-responsive img-center" src="assets/images/catering-buffet_1203-2320.jpg" alt="">
                 <h2>Friendly Staff</h2>
-                <p>We offer a full kitchen staff for all events. Let us focus on the food while you enjoy your event.</p>
+                <p>We offer a full kitchen staff for all events. Let our professional staff take the worry out of catering your event.</p>
             </div>
             <div class="col-sm-4">
                 <img class="img-thumbnail img-responsive img-center" src="assets/images/FriedChicken.jpg" alt="">
