--- a/MilesToGoCatering.html
+++ b/MilesToGoCatering.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#contact">About</a>
                     </li>
                     <li>
                         <a href="assets/images/MilesToGoCateringMenu.doc">Menu</a>
@@ -70,8 +70,9 @@
     <header class="business-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 ">
                     <h1 class="tagline">Miles To Go Catering</h1>
+                    <img class="img img-responsive" src="assets/images/MilesToGoCatering4.png" />
                 </div>
             </div>
         </div>
@@ -149,13 +150,14 @@
     <!-- jQuery -->
     <script src="assets/js/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="assets/js/bootstrap.min.js"></script>
         <!-- Add Smooth Scrolling -->
         <script src="assets/js/smoothScrolling.js"></script> 
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    
 
 </body>
 
