--- a/MilesToGoCatering.html
+++ b/MilesToGoCatering.html
@@ -70,8 +70,11 @@
     <header class="business-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 ">
+                <div class="col-lg-6 ">
                     <h1 class="tagline">Miles To Go Catering</h1>
+                    <p><i>"We strive to make our food delicious, our catering service superior, and your experience delightful and memorable."</i></p>
+                </div>
+                <div class="col-lg-6">    
                     <img class="img img-responsive" src="assets/images/MilesToGoCatering4.png" />
                 </div>
             </div>
