--- a/MilesToGoCatering.html
+++ b/MilesToGoCatering.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-6 ">
                     <h1 class="tagline">Miles To Go Catering</h1>
-                    <p><i>"We strive to make our food delicious, our catering service superior, and your experience delightful and memorable."</i></p>
+                    <p><i>"We’ll go the distance to deliver mouth watering cuisine."</i></p>
                 </div>
                 <div class="col-lg-6">    
                     <img class="img img-responsive" src="assets/images/MilesToGoCatering4.png" />
