fixing nav highlight scrollTo

--- a/MilesToGoCatering.html
+++ b/MilesToGoCatering.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#contact">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
                         <a href="assets/images/MilesToGoCateringMenu.doc">Menu</a>
@@ -82,31 +82,18 @@
     </header>
 
     <!-- Page Content -->
-    <div class="container" id="contact">
+    <div class="container" id="about">
 
         <hr>
 
-        <div class="row" >
+        <div class="row" id="about">
             <div class="col-sm-8">
                 <h2 class="featurette-heading">We proudly cater <span class="text-muted">ALL</span> your events!</h2>
                 <p class="lead">We are a full service catering company based in Charlotte, NC serving: weddings, small-mid sized corporate events, and all of your custom events! We strive to make our food delicious, our catering service superior, and your experience delightful and memorable. Give us a call and tell us about your next event!</p>
                     <a class="btn btn-default btn-lg" href="assets/images/MilesToGoCateringMenu.doc">Menu Download &raquo;</a>
                 </p>
             </div>
-            <div class="col-sm-4">
-                <h2>Contact Us</h2>
-                <address>
-                    <strong>Miles To Go Catering</strong>
-                    <br>7612 Rockland Dr
-                    <br>Charlotte,NC 28213
-                    <br>
-                </address>
-                <address>
-                    <abbr title="Phone">P:</abbr>(704) 224-8817
-                    <br>
-                    <abbr title="Email">E:</abbr> <a href="mailto:#">milestogocatering@gmail.com</a>
-                </address>
-            </div>
+            
         </div>
         <!-- /.row -->
 
@@ -132,7 +119,25 @@
         <!-- /.row -->
 
         <hr>
-
+        <!--Contact-->
+        <div class="row" id="contact">
+        <div class="col-sm-4">
+                <h2>Contact Us</h2>
+                <address>
+                    <strong>Miles To Go Catering</strong>
+                    <br>7612 Rockland Dr
+                    <br>Charlotte,NC 28213
+                    <br>
+                </address>
+                <address>
+                    <abbr title="Phone">P:</abbr>(704) 224-8817
+                    <br>
+                    <abbr title="Email">E:</abbr> <a href="mailto:#">milestogocatering@gmail.com</a>
+                </address>
+            </div>
+        </div> 
+        
+        <hr>   
         <!-- Footer -->
         <footer>
             <div class="row">
