resizing header img for phones

--- a/MilesToGoCatering.html
+++ b/MilesToGoCatering.html
@@ -141,10 +141,10 @@
         <!-- Footer -->
         <footer>
             <div class="row">
-                <div class="col-lg-6">
+                <!-- <div class="col-lg-6">
                     <p>Miles To Go Catering &copy;</p>
                     
-                </div>
+                </div> -->
                 <div class="col-lg-6">
                     <p class="pull-right"> Built with &#9829; by &middot; <a href="theduan.herokuapp.com" >Duan Walker 2017<a/> &middot; </p>
                 </div>
